src/pages/en/v1.17.0/rn-sdk/init.mdx
---
title: "React Native SDK - Initializing the SDK"
metaTitle: "React Native SDK - Initializing the SDK"
metaDescription: "Configuration options for the iOS React Native tracker's constructor method"
---
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'

<Aside type="caution">
	React Native SDK is in Beta and currently supports iOS apps only. Feel free to give us feedback or report any issue you may encounter on our [Slack](https://slack.openreplay.com) or check out our [Forum](https://forum.openreplay.com).
</Aside>

## Installation

The following line will install the tracker and with it the SDK for you to take advantage of all tracker features.

```bash
npm i @openreplay/react-native
```

## Initialization

When instantiating OpenReplay's tracker, there are several configuration options you can provide to customize many aspects of the recording and the recording experience. You must set the `projectKey` option in the constructor. You can get this value from your OpenReplay dashboard under 'Preferences > Projects'.

<Aside type="tip">
	Note that if you have multiple projects, you need to be careful which project key you choose.
</Aside>


### Adding the tracking code

Add the following code to your root file:

```js
import Openreplay from '@openreplay/react-native';

// ...
useEffect(() => {
	OpenReplay.tracker.startSession(
		'yourProjectKey',
		options, // explained below, set {} if empty
		'https://local.openreplay.instance/ingest' // not required if you're using managed version
	);
}, [])
```

### Sanitize Data

See [how to sanitize data in React Native replays](/rn-sdk/sanitization) for more details.

## Initialization Options

By default, all options are marked as `true`:

- `crashes: Bool` Enables crashlytics.
- `analytics: Bool` Enables analytics tracking of marked views.
- `performances: Bool` Enables performance listener.
- `logs: Bool` Enables logs listener.
- `screen: Bool` Enables screen recorder.

## Methods

<div class="grid grid-cols-12 md:grid-cols-12 gap-3 md:gap-4">
	<ORCard title="Get to know the methods and modules of the React Native SDK" url="/rn-sdk/modules" hideIcon={true} width="100"/>
</div>

## Have questions?
If you have any questions about this process, feel free to reach out to us on our [Slack](https://slack.openreplay.com) or check out our [Forum](https://forum.openreplay.com).